# ai-chat-bill

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  app.py  heroku.yml  llm_api.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy-heroku.yml
index/: index.faiss  index.pkl
