[project]
name = "ai-chat-bill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chainlit>=1.1.402",
    "langchain>=0.2.12",
    "langchain-openai>=0.1.22",
    "langchain-community>=0.2.11",
    "langchain-text-splitters>=0.2.2",
    "langchain-huggingface>=0.0.3",
    "faiss-cpu>=1.8.0",
    "pymupdf>=1.24.7",
    "sentence-transformers>=2.7.0",
    "numpy>=1.24.0",
    "openai>=1.37.0",
]
